<resources>
    <string name="app_name">Sapientia-Android2020-Project</string>
    <string name="api_url">https://opentable.herokuapp.com/api/</string>
    <string name="recycle_view_item_restaurant_image_description">Image of the restaurant</string>
    <string name="bottom_nav_item_list">Restaurants</string>
    <string name="bottom_nav_item_add">Add</string>
    <string name="bottom_nav_item_profile">Profile</string>
    <string name="filter_title">Filters</string>
    <string name="floating_action_button_filter">Clipart for filtering.</string>
    <string name="restaurant_text_price">Price:</string>
    <string name="restaurant_text_address">Address:</string>
    <string name="restaurant_text_city">City: %s</string>
    <string name="restaurant_text_area">Area: %s</string>
    <string name="restaurant_text_state">State: %s</string>
    <string name="restaurant_text_zip">Postal code: %s</string>
    <string name="restaurant_text_phone">Phone: %s</string>
    <string name="restaurant_text_coordinates">Coordinates: (%f, %f)</string>
    <string name="restaurant_text_web">Webpage: %s</string>
    <string name="restaurant_text_web_mobile">Mobile page: %s</string>
    <string name="restaurant_text_price_transition">restaurant_text_price</string>
    <string name="restaurant_image_transition">restaurant_image</string>
    <string name="restaurant_button_set_favorite">Add</string>
    <string name="restaurant_button_unset_favorite">Remove</string>
    <string name="shared_preferences_name">Sapientia-Android2020-Project-Settings.xml</string>
    <string name="item_empty_text">It\'s quite empty here&#8230;</string>
    <string name="button_remove_image_text">Remove</string>
    <string name="hint_state">State</string>
    <string name="hint_city">City</string>
    <string name="hint_postal_code">Postal code</string>
    <string name="hint_address">Address</string>
    <string name="hint_restaurant_name">Restaurant name</string>
    <string name="button_apply_filters">Apply filters</string>
    <string name="button_text_add">Add</string>
    <string name="bottom_nav_item_about">About</string>

    <string name="about_app_title">About the app</string>
    <string name="about_app">
        This year isn’t about going to restaurants, meanwhile we can explore some of  them at home and make an order, to get some good food and let our home made “specialties” rest for a while.
        During Android courses we had to do a little app as a project, where we  can explore restaurants and expand the data we have from the REST API with our experience.
        The goal was to have an app which works well, where the user can have a profile,  get data from the API as mentioned, list it, view it one by one, and store the modifications in a local database.
        You can learn more about this project on GitHub.
    </string>
    <string name="about_api_title">About the API</string>
    <string name="about_api">
        Unfortunately the original "OpenTable" API collapsed. So a dummy API which functioned as the original was created using Node.js an SQLite database.
        The rest API offers the same functionality as the original. The data set is recovered from a Room Database which served as a local cache.
        Sadly this collection is smaller then the original and there may be some smaller bugs here and there.
        The code and the data is available on GitHub, go check it out.
    </string>
    <string name="about_api_imok">
        As mentioned earlier the original api collapsed and became unusable but fortunately the development team at I\'M OK (cool guys by the way 😁) allowed us to upload our dummy api to one of their dev servers.
        This way was reachable 24/7 during the development of the application. Feel free to visit their WebSite to learn more about them and their projects.
    </string>
    <string name="learn_more">Learn more</string>
    <string name="restaurant_text_country">Country:</string>
    <string name="price_category">Price category:</string>
</resources>