<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/item_restaurant_text_city"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_city"
        app:drawableStartCompat="@drawable/ic_twotone_location_24" />

    <TextView
        android:id="@+id/item_restaurant_text_area"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_area"
        app:drawableStartCompat="@drawable/ic_twotone_explore_24" />

    <TextView
        android:id="@+id/item_restaurant_text_state"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_state"
        app:drawableStartCompat="@drawable/ic_twotone_map_24" />

    <TextView
        android:id="@+id/item_restaurant_text_zip"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_zip"
        app:drawableStartCompat="@drawable/ic_twotone_email_24" />

    <TextView
        android:id="@+id/item_restaurant_text_phone"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_phone"
        app:drawableStartCompat="@drawable/ic_twotone_contact_phone_24" />

    <TextView
        android:id="@+id/item_restaurant_text_coordinates"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_coordinates"
        app:drawableStartCompat="@drawable/ic_twotone_gps_location_24" />

    <TextView
        android:id="@+id/item_restaurant_text_web"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_web"
        app:drawableStartCompat="@drawable/ic_twotone_language_24" />


    <TextView
        android:id="@+id/item_restaurant_text_web_mobile"
        style="@style/item_restaurant_text"
        android:text="@string/restaurant_text_web_mobile"
        app:drawableStartCompat="@drawable/ic_twotone_book_online_24" />

</merge>