<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <ImageView
            android:id="@+id/item_restaurant_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/recycle_view_item_restaurant_image_description"
            android:cropToPadding="false"
            android:maxHeight="256dp"
            android:scaleType="centerCrop"
            android:src="@drawable/placeholder_restaurant"
            android:transitionName="food_image" />

        <TextView
            android:id="@+id/item_restaurant_text_price"
            style="@style/item_restaurant_text"
            android:text="@string/restaurant_text_price"
            app:drawableStartCompat="@drawable/ic_twotone_account_balance_wallet_24"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_restaurant_image" />

        <TextView
            android:id="@+id/item_restaurant_text_address"
            style="@style/item_restaurant_text"
            android:text="@string/restaurant_text_address"
            app:drawableStartCompat="@drawable/ic_twotone_navigation_24" />

</merge>