<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingHorizontal="16dp"
            android:orientation="vertical"
            tools:context=".fragments.AppInfoFragment">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_app_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_app" />

                    <Button
                        android:id="@+id/button_github"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="@string/learn_more"

                        app:icon="@drawable/ic_github" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="16dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextAppearance.MaterialComponents.Headline4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about_api_title" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_api" />

                    <Button
                        android:id="@+id/button_github_api"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="@string/learn_more"

                        app:icon="@drawable/ic_github" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:justificationMode="inter_word"
                        android:text="@string/about_api_imok" />

                    <Button
                        android:id="@+id/button_imok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="16dp"
                        android:text="@string/learn_more"
                        android:backgroundTint="@color/orange_imok"

                        app:icon="@drawable/ic_imok_logo" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </ScrollView>
</layout>